--- a/azure-containers.adoc
+++ b/azure-containers.adoc
@@ -14,7 +14,6 @@ ifdef::env-github[]
 :important-caption: :exclamation:
 endif::[]
 
-<<<
 == Introduction
 Docker was initially developed for Linux and has expanded to support Windows. Individual Docker images are either Windows-based or Linux-based, but can't be both at the same time.
 
@@ -22,8 +21,63 @@ For example, Microsoft offers Windows and Linux Docker images containing an ASP.
 
 Linux computers with Docker installed can only run Linux containers. Windows computers with Docker installed can run both kinds of containers. Windows accomplishes this by using a virtual machine to run a Linux system and uses the virtual Linux system to run Linux containers.
 
-<<<
-== ACR
+== Azure Container Registry (ACR)
+Azure Container Registry is a registry hosting service provided by Azure. Each Azure Container Registry resource you create is a separate registry with a unique URL. These registries are private: they require authentication to push or pull images.
+
+Registry::
+A registry is a web service to which Docker can connect to upload and download container images. The most well-known registry is Docker Hub, which is a public registry.
+
+Container Registry is organized around repositories that contain one or more images. All images stored in a container registry can be signed and are encrypted at rest. In addition to storing and hosting images, you can also use Container Registry to build images.
+
+Repository::
+A registry is organized as a series of repositories. Each repository contains multiple Docker images that share a common name and generally the same purpose and functionality. These images normally have different versions identified with a tag.
+
+Container Registry also lets you automate tasks such as redeploying an app when an image is rebuilt.
+
+The Premium SKU of Container Registry includes 500 GiB of storage.
+
+ACRs are highly scalable. They can be replicated to store images near where they're likely to be deployed.
+
+Resource Group::
+An Azure resource group is a logical container into which Azure resources are deployed and managed.
+
+TIP: When you download and run an image, you must specify the registry, repository, and version tag for the image. Tags are text labels, and you can use your version numbering system (v1.0, v1.1, v1.2, v2.0, and so on).
+
+=== Azure Registry authentication
+The recommended authentication method is Azure service principal. Access to a registry with an Azure Active Directory identity is role-based, and identities can be assigned one of three roles: **reader** (pull access only), **contributor** (push and pull access), or **owner** (pull, push, and assign roles to other users).
+
+The **admin account** is included with each registry; it is disabled by default.
+
+When the admin is enabled ( --admin-enabled true`), ACR enables the registry name as the username and the admin access key as the password.
+
+TIP: Only use the registry admin account for early testing and exploration, and do not share the username and password. Disable the admin account and use only role-based access with Azure Active Directory identities to maximize the security of your registry.
+
+=== Geo-replication
+Geo-replication enables an Azure container registry to function as a single registry, serving several regions with multi-master regional registries.
+
+.A geo-replicated registry provides the following benefits:
+    * Single registry/image/tag names can be used across multiple regions
+    * Network-close registry access from regional deployments
+    * No additional egress fees, as images are pulled from a local, replicated registry in the same region as your container host
+    * Single management of a registry across multiple regions
+
+=== Continuous deployment
+==== Webhooks
+Azure App Service supports continuous deployment of a web app using webhooks. A webhook is a service offered by Azure Container Registry. Services and applications can subscribe to the webhook to receive notifications about updates to Docker images in the registry.
+
+==== Container Registry task
+Tasks are configured to monitor registries and trigger rebuilds each time the source code changes automatically. If the build finishes successfully, Container Registry can store the image in the repository. If your web app is set up for continuous integration in App Service, it receives a notification via the webhook and updates the app.
+
+=== Base image
+The process of identifying a suitable base image usually starts with a search on Docker Hub for a ready-made image that **already contains an application framework** and all the utilities and tools of a Linux distribution like Ubuntu or Alpine.
+
+=== Dockerfile
+A Dockerfile is a plain text file containing all the commands needed to build an image. Dockerfiles are written in a minimal scripting language designed for **building and configuring images**, and documents the operations required to build an image starting with a base image. By convention, applications meant to be packaged as Docker images typically have a Dockerfile located in the **root of their source code**.
+
+The `docker build` command creates a new image by running a Dockerfile. The `-f` flag indicates the name of the Dockerfile to use. The `-t` flag specifies the name of the image to be created. The final parameter, `.`, provides the build context for the source files for the _COPY_ command.
+
+The PORTS field indicates port 80 in the image was mapped to port 8080 on your computer.
+
 === Create an ACR — build images
 . Create a resource group if necessary
 +
@@ -33,7 +87,7 @@ az group create \
   --name [group_name] \
   --location [location]
 ----
-+
+
 . Create an ACR of standard scalability and storage using the admin account
 +
 [source, bash]
@@ -44,7 +98,7 @@ az acr create \
   --sku standard \
   --admin-enabled true
 ----
-+
+
 . Get registry password and username to login to the specified registry
 +
 [source, bash]
@@ -52,35 +106,35 @@ az acr create \
 az acr credential show \
   --name [registry_name]
 ----
-+
+
 . Login to the private ACR (enter registry username and password)
 +
 [source, bash]
 ----
 docker login [registry_name].azurecr.io
 ----
-+
+
 . Create an alias for the image that specifies the repository and tag to be created in the Docker registry
 +
 [source, bash]
 ----
 docker tag [local_image_name:tag] [registry_name].azurecr.io/[local_image_name:tag]
 ----
-+
+
 . Check image with annotated tags
 +
 [source, bash]
 ----
 docker images
 ----
-+
+
 . Upload the specified image to the registry in the ACR
 +
 [source, bash]
 ----
 docker push [registry_name].azurecr.io/[local_image_name:tag]
 ----
-+
+
 . Query the repositories in the registry to confirm the image upload
 +
 [source, bash]
@@ -89,7 +143,7 @@ az acr repository list \
   --name [registry_name] <.>
 ----
 <.> you can additionally specify the username (`--username [username]` and password `--password [password]`
-+
+
 . List the images and their properties as JSON in the specified registry
 +
 [source, bash]
@@ -98,7 +152,7 @@ az acr repository show \
   --repository [repository_name] \
   --name [registry_name]
 ----
-+
+
 . Cleanup resources if necessary with `az group delete --name [group_name]`
 
 [IMPORTANT]
@@ -113,21 +167,21 @@ The name of the repo in the registry is equivalent to the name of the local imag
 ====
 
 === Manage ACR
-**Enable the admin account**
+.Enable the admin account
 [source, bash]
 ----
 az acr update -n [registry_name] \
   --admin-enabled true
 ----
 
-**Get registry password and username to login to the specified registry**
+.Get registry password and username to login to the specified registry
 [source, bash]
 ----
 az acr credential show \
   --name [registry_name]
 ----
 
-**Get registry password to login to the specified registry**
+.Get registry password to login to the specified registry
 [source, bash]
 ----
 az acr credential show \
@@ -135,7 +189,7 @@ az acr credential show \
   --query passwords[0].value
 ----
 
-**Get the URL of the login-server**
+.Get the URL of the login-server
 [source, bash]
 ----
 az acr show \
@@ -143,7 +197,7 @@ az acr show \
   --query loginServer
 ----
 
-**Login to the login-server with the specified username and password**
+.Login to the login-server with the specified username and password
 [source, bash]
 ----
 docker login [registry_name].azurecr.io \
@@ -151,7 +205,7 @@ docker login [registry_name].azurecr.io \
   --password=[password]
 ----
 
-**Build an image according to the Dockerfile instructions and store it in the registry**
+.Build an image according to the Dockerfile instructions and store it in the registry
 [source, bash]
 ----
 az acr build \
@@ -159,7 +213,7 @@ az acr build \
   --image [image_name] .
 ----
 
-**Show tags of the specified repo as text**
+.Show tags of the specified repo as text
 [source, bash]
 ----
 az acr repository show-tags \
@@ -170,7 +224,7 @@ az acr repository show-tags \
   --output text
 ----
 
-**Remove the resource group, the container registry, and the container images stored**
+.Remove the resource group, the container registry, and the container images stored
 [source, bash]
 ----
 az group delete \
@@ -181,6 +235,7 @@ TIP: The **login-server URL** for a registry in Azure Container Registry has the
 
 === Enable continuous integration
 . Define a task to automatically build an image from the source code and store it to the specified registry in the ACR
++
 [source, bash]
 ----
 az acr task create \
@@ -200,7 +255,7 @@ az acr task create \
     * go to the _Webhooks_ page and check the webhook status
 
 . Deploy the app to use the webhook for automatic image rebuilds
-
++
 [source, bash]
 ----
 az acr build \
@@ -217,7 +272,7 @@ az acr replication create \
   --registry [registry_name] \
   --location [replicated_region]
 ----
-+
+
 . Show all container image replicas created
 +
 [source, bash]
@@ -227,8 +282,13 @@ az acr replication list \
   --output table
 ----
 
-<<<
-== ACI
+== Azure Container Instance (ACI)
+Azure Container Instances is a great solution for any scenario that can operate in isolated containers, including simple applications, task automation, and build jobs.
+
+Azure Container Instances also supports executing a command in a running container by providing an interactive shell to help with application development and troubleshooting. Access takes places over HTTPS, using TLS to secure client connections.
+
+To retrieve and persist state with Azure Container Instances, we offer direct mounting of Azure Files shares backed by Azure Storage.
+
 === Create an ACI — run containers
 . Create an ACI, which loads the image from the ACR, and run it in Azure
 +
@@ -242,14 +302,14 @@ az container create \
   --registry-username [username] \
   --registry-password [password]
 ----
-+
+
 . Check running containers
 +
 [source, bash]
 ----
 docker ps
 ----
-+
+
 . Query the IP address of the instance to find the fully qualified domain name of the instance
 +
 [source, bash]
@@ -269,7 +329,7 @@ The default port is 80 and the port protocol is TCP.
 
 === Manage containers
 ==== Container lifecycle
-**Deploy a container inside the specified resource group with the specified properties**
+.Deploy a container inside the specified resource group with the specified properties
 [source, bash]
 ----
 az container create \
@@ -286,7 +346,7 @@ az container create \
   --registry-password [password]
 ----
 
-**Start the specified container**
+.Start the specified container
 [source, bash]
 ----
 az container start \
@@ -294,7 +354,7 @@ az container start \
   --name [instance_name]
 ----
 
-**Stop the specified container**
+.Stop the specified container
 [source, bash]
 ----
 az container stop \
@@ -302,7 +362,7 @@ az container stop \
   --name [instance_name
 ----
 
-**Restart the specified container**
+.Restart the specified container
 [source, bash]
 ----
 az container restart \
@@ -310,7 +370,7 @@ az container restart \
   --name [instance_name]
 ----
 
-**Delete the specified container**
+.Delete the specified container
 [source, bash]
 ----
 az container delete \
@@ -319,20 +379,20 @@ az container delete \
 ----
 
 ==== Container information
-**List containers**
+.List containers
 [source, bash]
 ----
 az container list
 ----
 
-**List all containers in a resource group**
+.List all containers in a resource group
 [source, bash]
 ----
 az container list \
   --resource-group [group_name]
 ----
 
-**List specified information of all containers in a resource group**
+.List specified information of all containers in a resource group
 [source, bash]
 ----
 az container list \
@@ -340,7 +400,7 @@ az container list \
   --query value[].[name,provisioningState]
 ----
 
-**Show the IP address and provisioning state of the specified container table-formatted**
+.Show the IP address and provisioning state of the specified container table-formatted
 [source, bash]
 ----
 az container show \
@@ -349,7 +409,7 @@ az container show \
   --query "{FQDN:ipAddress.fqdn,ProvisioningState:provisioningState}" --out table
 ----
 
-**Query the IP address of the specified container instance**
+.Query the IP address of the specified container instance
 [source, bash]
 ----
 az container show \
@@ -358,7 +418,7 @@ az container show \
   --query ipAddress.ip
 ----
 
-**Show all details of the specified container (JSON)**
+.Show all details of the specified container (JSON).
 [source, bash]
 ----
 az container show \
@@ -366,7 +426,7 @@ az container show \
   --name [instance_name]
 ----
 
-**List specified information of the specified container in a resource group**
+.List specified information of the specified container in a resource group
 [source, bash]
 ----
 az container show \
@@ -376,7 +436,7 @@ az container show \
 ----
 
 ==== Container stats
-**Show the logs of the specified container (JSON)**
+.Show the logs of the specified container (JSON)
 [source, bash]
 ----
 az container logs \
@@ -384,7 +444,7 @@ az container logs \
   --name [instance_name]
 ----
 
-**Attach the local standard out and standard error streams to that of the container**
+.Attach the local standard out and standard error streams to that of the container
 [source, bash]
 ----
 az container attach \
@@ -394,8 +454,44 @@ az container attach \
 
 NOTE: The container details is shown as JSON, specifying e.g. the operating system, the image, resource requests, etc.
 
-<<<
-== AKS
+== Azure Kubernetes Service (AKS)
+An AKS cluster is a cloud hosted Kubernetes cluster. Azure Kubernetes Service simplifies deploying a managed Kubernetes cluster in Azure by offloading much of the complexity and operational overhead to Azure.
+
+As a hosted Kubernetes service, Azure handles critical tasks for you, like health monitoring and maintenance. AKS environment is enabled with features such as automated updates, self-healing, and easy scaling.
+
+You can use Resource Manager templates to automate cluster creation. With these templates, you specify features such as advanced networking, Azure Active Directory (AD) integration, and monitoring.
+
+.Configure basic information about the cluster:
+    * The Kubernetes cluster name
+    * The version of Kubernetes to install
+    * A DNS prefix to make the master node publicly accessible
+    * The initial node pool size
+
+[NOTE]
+====
+The Kubernetes cluster master node is managed by Azure and is free. You manage the agent nodes in the cluster and only pay for the node VMs, storage, and networking resources consumed in your cluster.
+
+The initial node pool size defaults to two nodes, however it's recommended that at least three nodes are used for a production environment.
+
+In production and cloud deployments, the preferred configuration is a high-availability deployment with three to five replicated control planes, instead of a single control plane.
+====
+
+.AKS supports:
+    * Identity and security management.
+    * Integrated logging and monitoring.
+    * Auto cluster node and pod scaling.
+    * Cluster node upgrades.
+    * Static and dynamic storage volumes.
+    * GPU enabled nodes.
+    * Cluster deployment into an existing virtual network.
+    * Ingress with HTTP application routing.
+    * Docker file image format.
+    * Private container registry.
+
+AKS also supports all the popular development and management tools such as Helm, Draft, Kubernetes extension for Visual Studio Code and Visual Studio Kubernetes Tools.
+
+For information on the deployment center and DevOps Spaces go to https://docs.microsoft.com/en-us/learn/modules/intro-to-azure-kubernetes-service/[Introduction to Azure Kubernetes Service].
+
 === Deploy an ACI with Kubernetes as orchestrator
 . `az group create --name [group_name] --location [location]` — create a resource group if necessary
 . `az aks create --resource-group [group_name] --name [cluster_name] --node-count 1 --enable-addons monitoring --generate-ssh-keys` — create an AKS cluster
@@ -420,7 +516,7 @@ _Intro video_
 . `kubectl create -f examples/aci-connector.yaml`— set up the ACI connector
 . create a Kubernetes manifest file
 
-**Example Kubernetes manifest file**
+.Example Kubernetes manifest file
 [source, yaml, numbered]
 ----
 apiVersion: apps/v1
@@ -461,13 +557,16 @@ spec:
           name: redis
 ----
 
-<<<
-== Manage Azure Account
-- `az login` — sign in to the Azure CLI
+== Manage Azure Account & CLI
+- `az login` — sign in to Azure CLI
+- `az login -u [username] -p [password]` / `az login --username [username] --password [password]` — sing in to Azure CLI specifying the username and password
+- `az logout username` — sign-out from account
 - `az logout` — Log out to remove access to Azure subscriptions
 - `az account list -o table` — list Azure accounts table-formatted
 - `az version` — find the version and dependent libraries that are installed
 - `az upgrade` — upgrade to the latest version
+
+See https://docs.microsoft.com/en-us/cli/azure/reference-index?view=azure-cli-latest[Azure CLI commands] for a full list of commands.
 
 === Environment variables
 [source, bash, numbered]
@@ -476,113 +575,6 @@ ACR_NAME=[registry_name] <.>
 ----
 <.> referenced as `$ACR_NAME`
 
-<<<
-== Glossary
-Registry::
-A registry is a web service to which Docker can connect to upload and download container images. The most well-known registry is Docker Hub, which is a public registry.
-
-Repository::
-A registry is organized as a series of repositories. Each repository contains multiple Docker images that share a common name and generally the same purpose and functionality. These images normally have different versions identified with a tag.
-+
-When you download and run an image, you must specify the registry, repository, and version tag for the image. Tags are text labels, and you can use your version numbering system (v1.0, v1.1, v1.2, v2.0, and so on).
-
-Base image::
-The process of identifying a suitable base image usually starts with a search on Docker Hub for a ready-made image that **already contains an application framework** and all the utilities and tools of a Linux distribution like Ubuntu or Alpine.
-
-Dockerfile::
-A Dockerfile is a plain text file containing all the commands needed to build an image. Dockerfiles are written in a minimal scripting language designed for **building and configuring images**, and documents the operations required to build an image starting with a base image. By convention, applications meant to be packaged as Docker images typically have a Dockerfile located in the **root of their source code**.
-+
-The `docker build` command creates a new image by running a Dockerfile. The `-f` flag indicates the name of the Dockerfile to use. The `-t` flag specifies the name of the image to be created. The final parameter, `.`, provides the build context for the source files for the _COPY_ command.
-+
-The PORTS field indicates port 80 in the image was mapped to port 8080 on your computer.
-
-Resource Group::
-An Azure resource group is a logical container into which Azure resources are deployed and managed.
-
-Azure Container Registry (ACR)::
-Azure Container Registry is a registry hosting service provided by Azure. Each Azure Container Registry resource you create is a separate registry with a unique URL. These registries are private: they require authentication to push or pull images.
-+
-Container Registry is organized around repositories that contain one or more images. All images stored in a container registry can be signed and are encrypted at rest. In addition to storing and hosting images, you can also use Container Registry to build images.
-+
-Container Registry also lets you automate tasks such as redeploying an app when an image is rebuilt.
-+
-The Premium SKU of Container Registry includes 500 GiB of storage.
-+
-ACRs are highly scalable. They can be replicated to store images near where they're likely to be deployed.
-
-Azure Registry authentication::
-the recommended authentication method is Azure service principal. Access to a registry with an Azure Active Directory identity is role-based, and identities can be assigned one of three roles: **reader** (pull access only), **contributor** (push and pull access), or **owner** (pull, push, and assign roles to other users).
-+
-The **admin account** is included with each registry; it is disabled by default.
-+
-When the admin is enabled ( --admin-enabled true`), ACR enables the registry name as the username and the admin access key as the password.
-+
-TIP: Only use the registry admin account for early testing and exploration, and do not share the username and password. Disable the admin account and use only role-based access with Azure Active Directory identities to maximize the security of your registry.
-
-Geo-replication::
-Geo-replication enables an Azure container registry to function as a single registry, serving several regions with multi-master regional registries.
-+
-A geo-replicated registry provides the following benefits:
-+
-- Single registry/image/tag names can be used across multiple regions
-- Network-close registry access from regional deployments
-- No additional egress fees, as images are pulled from a local, replicated registry in the same region as your container host
-- Single management of a registry across multiple regions
-
-Webhooks::
-Azure App Service supports continuous deployment of a web app using webhooks. A webhook is a service offered by Azure Container Registry. Services and applications can subscribe to the webhook to receive notifications about updates to Docker images in the registry.
-
-Container Registry task::
-Tasks are configured to monitor registries and trigger rebuilds each time the source code changes automatically. If the build finishes successfully, Container Registry can store the image in the repository. If your web app is set up for continuous integration in App Service, it receives a notification via the webhook and updates the app.
-
-Azure Container Instance (ACI)::
-Azure Container Instances is a great solution for any scenario that can operate in isolated containers, including simple applications, task automation, and build jobs.
-+
-Azure Container Instances also supports executing a command in a running container by providing an interactive shell to help with application development and troubleshooting. Access takes places over HTTPS, using TLS to secure client connections.
-+
-To retrieve and persist state with Azure Container Instances, we offer direct mounting of Azure Files shares backed by Azure Storage.
-
-Azure Kubernetes Service (AKS)::
-An AKS cluster is a cloud hosted Kubernetes cluster. Azure Kubernetes Service simplifies deploying a managed Kubernetes cluster in Azure by offloading much of the complexity and operational overhead to Azure.
-+
-As a hosted Kubernetes service, Azure handles critical tasks for you, like health monitoring and maintenance. AKS environment is enabled with features such as automated updates, self-healing, and easy scaling.
-+
-You can use Resource Manager templates to automate cluster creation. With these templates, you specify features such as advanced networking, Azure Active Directory (AD) integration, and monitoring.
-+
-Configure basic information about the cluster:
-+
-    - The Kubernetes cluster name
-    - The version of Kubernetes to install
-    - A DNS prefix to make the master node publicly accessible
-    - The initial node pool size
-+
-[NOTE]
-====
-The Kubernetes cluster master node is managed by Azure and is free. You manage the agent nodes in the cluster and only pay for the node VMs, storage, and networking resources consumed in your cluster.
-
-The initial node pool size defaults to two nodes, however it's recommended that at least three nodes are used for a production environment.
-
-In production and cloud deployments, the preferred configuration is a high-availability deployment with three to five replicated control planes, instead of a single control plane.
-====
-+
-AKS supports:
-+
-    - Identity and security management.
-    - Integrated logging and monitoring.
-    - Auto cluster node and pod scaling.
-    - Cluster node upgrades.
-    - Static and dynamic storage volumes.
-    - GPU enabled nodes.
-    - Cluster deployment into an existing virtual network.
-    - Ingress with HTTP application routing.
-    - Docker file image format.
-    - Private container registry.
-+
-AKS also supports all the popular development and management tools such as Helm, Draft, Kubernetes extension for Visual Studio Code and Visual Studio Kubernetes Tools.
-+
-For information on the deployment center and DevOps Spaces go to https://docs.microsoft.com/en-us/learn/modules/intro-to-azure-kubernetes-service/[Introduction to Azure Kubernetes Service].
-
-<<<
 == References
 === MS modules
 - https://docs.microsoft.com/en-us/learn/modules/intro-to-containers/[Build a containerized web application with Docker]
@@ -591,6 +583,7 @@ For information on the deployment center and DevOps Spaces go to https://docs.mi
 - https://docs.microsoft.com/en-us/learn/modules/deploy-run-container-app-service/[Deploy and run a containerized web app with Azure App Service]
 - https://docs.microsoft.com/en-us/learn/modules/intro-to-azure-kubernetes-service/[Introduction to Azure Kubernetes Service]
 
-=== MS Docs
+=== MS docs
 - https://docs.microsoft.com/en-us/azure/container-registry/container-registry-get-started-azure-cli[Quickstart: Create a private container registry using the Azure CLI]
 - https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough[Quickstart: Deploy an Azure Kubernetes Service cluster using the Azure CLI]
+- https://docs.microsoft.com/en-us/cli/azure/reference-index?view=azure-cli-latest[Azure CLI commands]
